# PyAddrs

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: test.yml
src/pyaddrs/: ip6.py
tests/: test_ip.py
