[build-system]
requires = ["hatchling", "hatch-vsc"]
build-backend = "hatchling.build"

[project]
name = "pyaddrs"
description = "IP Address Library"
license = "MIT"
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_pyaddrs_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

